@@ -4,7 +4,7 @@
 define('PKG_NAME','ms2Gallery');
 define('PKG_NAME_LOWER',strtolower(PKG_NAME));
 
-define('PKG_VERSION','1.4.2');
+define('PKG_VERSION','1.4.3');
 define('PKG_RELEASE','pl');
 define('PKG_AUTO_INSTALL', true);
 
